# destructive_command_guard

./: .gitignore  AGENTS.md  Cargo.toml  DCG_IMPROVEMENT_PLAN__OPUS.md  README.md  build.rs  install.ps1  install.sh
.beads/: agent_mail.txt  issues.jsonl  research_crates_findings.md
.github/ISSUE_TEMPLATE/: config.yml  false_negative.yml  false_positive.yml  new_pack_request.yml
.github/workflows/: ci.yml  cli-version-audit.yml  dcg-scan.yml  dist.yml  telemetry-e2e.yml
action/: README.md  action.yml
benches/: heredoc_perf.rs  regex_automata_comparison.rs
docs/: adr-001-heredoc-scanning.md  cli-versions.yaml  configuration.md  coverage_audit.md  design-2cu-false-positive-reduction.md  heredoc-error-messages.md  pack-expansion-index.md  pack-implementation-checklist.md  pack-maintenance.md  pack-task-template.md  pattern-library-design.md  pattern_audit.md  regex-automata-decision-memo.md  scan-precommit-guide.md  tier-dependency-strategy.md  troubleshooting.md
docs/architecture/: pack-design.md
docs/packs/: README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_evaluate.rs  fuzz_heredoc_extract.rs  fuzz_heredoc_language.rs  fuzz_heredoc_trigger.rs  fuzz_shell_extract.rs
perf/baselines/: 2026-01-11-after-lazy.json  README.md
scripts/: audit_patterns.py  check_cli_versions.sh  coverage.sh  e2e_test.sh  test-quick.sh
src/: allowlist.rs  ast_matcher.rs  cli.rs  config.rs  context.rs  evaluator.rs  heredoc.rs  hook.rs  lib.rs  logging.rs  main.rs  normalize.rs  pending_exceptions.rs  perf.rs  scan.rs  simulate.rs  suggestions.rs  trace.rs
src/history/: mod.rs  schema.rs
src/packs/: mod.rs  regex_engine.rs  test_helpers.rs  test_template.rs
src/packs/apigateway/: aws.rs  kong.rs  mod.rs
src/packs/cloud/: aws.rs  azure.rs  gcp.rs  mod.rs
src/packs/containers/: compose.rs  docker.rs  mod.rs  podman.rs
src/packs/core/: filesystem.rs  git.rs  mod.rs
src/packs/database/: mod.rs  mongodb.rs  mysql.rs  postgresql.rs  redis.rs  sqlite.rs
src/packs/dns/: mod.rs  route53.rs
src/packs/infrastructure/: ansible.rs  mod.rs  pulumi.rs  terraform.rs
src/packs/kubernetes/: helm.rs  kubectl.rs  kustomize.rs  mod.rs
src/packs/loadbalancer/: nginx.rs
src/packs/monitoring/: datadog.rs  mod.rs
src/packs/package_managers/: mod.rs
src/packs/safe/: cleanup.rs
src/packs/search/: opensearch.rs
src/packs/secrets/: vault.rs
src/packs/storage/: gcs.rs  mod.rs
src/packs/strict_git/: mod.rs
src/packs/system/: disk.rs  mod.rs  permissions.rs  services.rs
src/telemetry/: mod.rs  schema.rs
tests/: allowlist_command_tests.rs  cli_e2e.rs  config_error_repro.rs  golden_isomorphism.rs  history_integration.rs  memory_tests.rs  pattern_audit.rs  regression_corpus.rs  repro_context_bypass.rs  repro_context_depth.rs  repro_context_tokenizer.rs  repro_heredoc_indent.rs  repro_normalization_bypass.rs  repro_safe_pattern_bypass.rs  telemetry_full_flow.rs  telemetry_integration.rs
tests/common/: db.rs  fixtures.rs
tests/corpus/: README.md  canonical.toml
tests/corpus/bypass_attempts/: heredoc_inline.toml  wrappers.toml
tests/corpus/edge_cases/: future_packs.toml
tests/corpus/false_positives/: git_safe.toml
tests/corpus/true_positives/: git_destructive.toml  rm_destructive.toml
tests/e2e/: run_telemetry_e2e.sh  test_doctor_install_uninstall.sh
