[package]
name = "destructive_command_guard"
version = "0.2.0"
edition = "2024"
resolver = "2"
authors = [
    "Jeffrey Emanuel <jeff@jeffreyemanuel.dev>",
    "Dowwie <dowwie@gmail.com>"
]
description = "A Claude Code hook that blocks destructive commands before they execute"
repository = "https://github.com/Dicklesworthstone/destructive_command_guard"
homepage = "https://github.com/Dicklesworthstone/destructive_command_guard"
license = "MIT"
keywords = ["destructive", "safety", "claude", "hook", "cli", "guard"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
rust-version = "1.85"
exclude = [
    ".github/",
    ".beads/",
    "scripts/",
    "*.md",
    "!README.md",
]

# Primary binary with short alias
[[bin]]
name = "dcg"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
fancy-regex = "0.14"
memchr = "2.7"
colored = "2.1"
dirs = "5.0"
clap = { version = "4.5", features = ["derive", "env"] }
once_cell = "1.19"

[build-dependencies]
vergen-gix = { version = "1.0", features = ["build", "cargo", "rustc"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"

[profile.release]
opt-level = "z"     # Optimize for size (lean binary for distribution)
lto = true          # Link-time optimization across crates
codegen-units = 1   # Single codegen unit for better optimization
panic = "abort"     # Smaller binary, no unwinding overhead
strip = true        # Remove debug symbols

[profile.dev]
opt-level = 1       # Faster compile times during development

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
