[package]
name = "destructive_command_guard"
version = "0.2.0"
edition = "2024"
resolver = "2"
authors = [
    "Jeffrey Emanuel <jeff@jeffreyemanuel.dev>",
    "Dowwie <dowwie@gmail.com>"
]
description = "A Claude Code hook that blocks destructive commands before they execute"
repository = "https://github.com/Dicklesworthstone/destructive_command_guard"
homepage = "https://github.com/Dicklesworthstone/destructive_command_guard"
license = "MIT"
keywords = ["destructive", "safety", "claude", "hook", "cli", "guard"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
rust-version = "1.85"
exclude = [
    ".github/",
    ".beads/",
    "scripts/",
    "*.md",
    "!README.md",
]

# Primary binary with short alias
[[bin]]
name = "dcg"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
toml_edit = "0.22"         # Preserves formatting when editing TOML files
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }  # RFC 3339 timestamps
fancy-regex = "0.14"
regex = "1.10"              # For RegexSet in heredoc detection
memchr = "2.7"
colored = "2.1"
dirs = "5.0"
clap = { version = "4.5", features = ["derive", "env"] }
once_cell = "1.19"
base64 = "0.22"              # For decision log format parsing in simulate

# AST-based pattern matching for heredoc/inline-script content
ast-grep-core = "0.40"
ast-grep-language = "0.40"

# Tracing/logging for heredoc detection debugging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
vergen-gix = { version = "1.0", features = ["build", "cargo", "rustc"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "heredoc_perf"
harness = false

[profile.release]
opt-level = "z"     # Optimize for size (lean binary for distribution)
lto = true          # Link-time optimization across crates
codegen-units = 1   # Single codegen unit for better optimization
panic = "abort"     # Smaller binary, no unwinding overhead
strip = true        # Remove debug symbols

[profile.dev]
opt-level = 1       # Faster compile times during development

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
