[package]
name = "destructive_command_guard-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
serde_json = "1.0"

[dependencies.destructive_command_guard]
path = ".."

# Fuzz target: full evaluator
[[bin]]
name = "fuzz_evaluate"
path = "fuzz_targets/fuzz_evaluate.rs"
test = false
doc = false
bench = false

# Fuzz target: hook JSON input parsing
[[bin]]
name = "fuzz_hook_input"
path = "fuzz_targets/fuzz_hook_input.rs"
test = false
doc = false
bench = false

# Fuzz target: context classifier (shell tokenizer)
[[bin]]
name = "fuzz_context"
path = "fuzz_targets/fuzz_context.rs"
test = false
doc = false
bench = false

# Fuzz target: command normalization
[[bin]]
name = "fuzz_normalize"
path = "fuzz_targets/fuzz_normalize.rs"
test = false
doc = false
bench = false

# Fuzz target: heredoc Tier 1 trigger detection (RegexSet)
[[bin]]
name = "fuzz_heredoc_trigger"
path = "fuzz_targets/fuzz_heredoc_trigger.rs"
test = false
doc = false
bench = false

# Fuzz target: heredoc Tier 2 extraction (bounded parsing)
[[bin]]
name = "fuzz_heredoc_extract"
path = "fuzz_targets/fuzz_heredoc_extract.rs"
test = false
doc = false
bench = false

# Fuzz target: heredoc language detection heuristics
[[bin]]
name = "fuzz_heredoc_language"
path = "fuzz_targets/fuzz_heredoc_language.rs"
test = false
doc = false
bench = false

# Fuzz target: bash AST command extraction (tree-sitter via ast-grep)
[[bin]]
name = "fuzz_shell_extract"
path = "fuzz_targets/fuzz_shell_extract.rs"
test = false
doc = false
bench = false
